kubernetes/audiobookshelf/audiobook.yml
apiVersion: v1
kind: Namespace
metadata:
  name: audiobookshelf
  labels:
    istio.io/dataplane-mode: ambient
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: audiobookshelf
  namespace: audiobookshelf
spec:
  revisionHistoryLimit: 3
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: audiobookshelf
  template:
    metadata:
      labels:
        app: audiobookshelf
    spec:
      containers:
      - name: audiobookshelf
        image: ghcr.io/advplyr/audiobookshelf:2.36.0@sha256:180acad33d69c99ed208676465d8edcb268fa46967735579a7810859885b1a8e
        imagePullPolicy: Always
        ports:
        - containerPort: 80
          hostPort: 13378
        volumeMounts:
        - name: audiobooks
          mountPath: /audiobooks
        - name: audiobooks-libation
          mountPath: /audiobooks-libation
        - name: config
          mountPath: /config
        - name: metadata
          mountPath: /metadata
      volumes:
      - name: audiobooks
        hostPath:
          path: /data/media/audiobooks
          type: DirectoryOrCreate
      - name: audiobooks-libation
        hostPath:
          path: /data/media/audiobooks-libation
          type: DirectoryOrCreate
      - name: config
        hostPath:
          path: /data/audiobookshelf/config
          type: DirectoryOrCreate
      - name: metadata
        hostPath:
          path: /data/audiobookshelf/metadata
          type: DirectoryOrCreate
---
apiVersion: v1
kind: Service
metadata:
  name: audiobookshelf
  namespace: audiobookshelf
  annotations:
    tailscale.com/expose: "true"
spec:
  selector:
    app: audiobookshelf
  ports:
  - name: http
    protocol: TCP
    port: 13378
    targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: audiobookshelf-ingress
  namespace: audiobookshelf
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - audiobook.alexmickelson.guru
    secretName: audiobookshelf-tls-cert
  rules:
  - host: audiobook.alexmickelson.guru
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: audiobookshelf
            port:
              number: 13378
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: audiobookshelf
  name: audiobookshelf-ts-ingress
  annotations:
    tailscale.com/funnel: "false"
spec:
  ingressClassName: tailscale
  defaultBackend:
    service:
      name: audiobookshelf
      port:
        number: 13378
  tls:
    - hosts:
        - audiobook
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: audiobookshelf-http-route
  namespace: audiobookshelf
spec:
  parentRefs:
    - name: envoy-gateway
      namespace: envoy-gateway-ingress
    - name: pangolin-gateway
      namespace: istio-ingress
  hostnames:
    - audiobook.alexmickelson.guru
  rules:
    - backendRefs:
        - name: audiobookshelf
          port: 13378
      matches:
        - path:
            type: PathPrefix
            value: /
